--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+body {
+  background-color: rgb(90, 155, 145);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#toDolist {
+  min-height: 700px;
+  width: 400px;
+  margin-top: 50px;
+  background-color: #f5f5fa;
   display: flex;
   flex-direction: column;
+  align-items: top;
+  justify-content: left;
+  padding: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px 24px rgba(0, 0, 0, 0.1);
+}
+
+#titleBox {
+  display: flex;
+  justify-content: center;
+  width: 400px;
+}
+
+#inputAddBoxContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  justify-content: space-evenly;
+}
+
+#listBody {
+  padding: 3px;
+}
+
+#inputBox {
+  border: none;
+  width: 350px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 11px 3px rgba(0, 0, 0, 0.1);
+  height: 30px;
+}
+
+#addBtn {
+  background: rgb(90, 155, 145);
+  height: 32px;
+  width: 50px;
+  padding: 10px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+  font-size: 18px;
+  color: #fcfbfb;
+  margin-left: 5px;
+  box-shadow: 0px 10px 11px 3px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
+.listItem {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 11px 3px rgba(0, 0, 0, 0.1);
+  min-height: 30px;
+  padding: 3px;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listItem p {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 2px;
+}
+
+.tickCrossBtns {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.completed {
+  cursor: pointer;
+  box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.1);
+}
+
+.fadeStrikethrough {
+  opacity: 0.4;
+}
+
+.fadeStrikethrough p {
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+
+.Delbtn {
+  background: rgb(236, 135, 135);
+  height: 5px;
+  width: 5px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 10px;
+  border: none;
+  font-size: 18px;
+  color: #ffffff;
+  box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.1);
+  margin-left: 5px;
 }
